--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -14,11 +14,12 @@
 
     <!-- Material Dashboard CSS -->
     <link rel="stylesheet" href="/node_modules/material-dashboard/assets/css/material-dashboard.min.css?v=2.1.1">
-    
-    <!-- datepicker CSS -->>
+
+    <!-- datepicker CSS -->
     <link href="/css/bootstrap-datepicker.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
-    
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
+
     <!-- original -->
     <link href="/css/style.css" rel="stylesheet">
     <%- defineContent('styles') %>
@@ -48,7 +49,8 @@
     <script src="/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <!-- datepicker日本語対応用ファイル -->
     <script src="/js/locales/bootstrap-datepicker.ja.js" type="text/javascript"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/js/tempusdominus-bootstrap-4.min.js"></script>
 
     <script src="/js/master/common.js"></script>
 
