--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -4,6 +4,7 @@
 Aa-4
 <%- contentFor('styles') %>
 <%- contentFor('scripts') %>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="/js/lodash.debounce.min.js"></script>
 <script src="/js/master/events/screeningEvent.js"></script>
 
@@ -97,7 +98,68 @@ Aa-4
     </form>
 </div>
 
-<div class="scheduler" style="display: none"></div>
+
+<div id="scheduler" class="d-none">
+    <div v-if="scheduleData.dates.length > 0" class="scheduler text-small">
+        <div class="table-header">
+            <table class="border">
+                <thead class="header">
+                    <tr class="border text-center">
+                        <td v-bind:style="{ width: TIME_WIDTH + 'px' }" class="border" rowspan="2">時間</td>
+                        <td v-for="date in scheduleData.dates" class="border" colspan="9">
+                            {{ moment(date.data).format('MM/DD') }}</td>
+                    </tr>
+                    <template v-for="date in scheduleData.dates">
+                        <td v-for="screen in date.screens" class="border text-center"
+                            v-bind:style="{ minWidth: SCREEN_WIDTH + 'px' }">{{ screen.data.name.ja }}</td>
+                    </template>
+                </thead>
+            </table>
+        </div>
+        <div class="scrollable-body">
+            <table class="border">
+                <tbody>
+                    <tr>
+                        <td class="text-center border" v-bind:style="{ width: TIME_WIDTH + 'px' }">
+                            <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }" class="border-bottom">
+                                {{ time }}</div>
+                        </td>
+                        <template v-for="date in scheduleData.dates">
+                            <td v-for="screen in date.screens" class="screen border-right border-left"
+                                v-bind:style="{ minWidth: SCREEN_WIDTH + 'px' }">
+                                <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }"
+                                    class="border-bottom w-100"></div>
+                                <div v-for="performance in screen.performances" class="performance w-100"
+                                    v-on:click="editPerformance(performance)"
+                                    v-bind:style="getPerformanceStyle(performance)">
+                                    <div v-bind:class="{ 
+                                    'bg-danger': getOverlapPerformanceCount(performance, screen.performances) > 0,
+                                    'bg-primary': getOverlapPerformanceCount(performance, screen.performances) === 0
+                                }" class="inner p-1 rounded pointer border border-white">
+                                        <div class="overflow-hidden nowrap mw-100 text-x-small text-white">
+                                            {{ performance.name.ja }}
+                                        </div>
+                                        <div class="overflow-hidden">
+                                            <a class="badge badge-info mw-100" target="_blank"
+                                                v-bind:href="'/ticketTypeGroups/' + performance.offers.id + '/update'">
+                                                {{ performance.offers.name.ja }}
+                                            </a>
+                                        </div>
+                                        <div>
+                                            <span v-if="isReservedSeatsAvailable(performance)"
+                                                class="badge badge-success">
+                                                座席指定</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </template>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 <%- include('add') %>
 <%- include('edit') %>
