--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -24,7 +24,7 @@ Aa-11
         </div>
 
         <div class="form-group">
-            <label for="reservationNumber" class="">
+            <label for="reservationNumber">
                 予約
             </label>
             <div class="row">
@@ -45,18 +45,45 @@ Aa-11
         </div>
 
         <div class="form-group">
-            <label for="modifiedFrom" class="">
-                更新日(From - To)
+            <label for="bookingFrom">
+                予約日(From - To)
             </label>
-            <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder="" maxlength=10
-                name="modifiedFrom" id="modifiedFrom" value="" />
-            ～
-            <input class="form-control datepicker" style="width:30%;display:inline-block;" placeholder="" maxlength=10
-                name="modifiedThrough" id="modifiedThrough" value="" />
+
+            <div class="input-group">
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="bookingFrom" id="bookingFrom"
+                    value="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">から</span>
+                </div>
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="bookingThrough"
+                    id="bookingThrough" valufe="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">まで</span>
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
-            <label for="reservationFor[id]" class="">
+            <label for="modifiedFrom">
+                更新日(From - To)
+            </label>
+
+            <div class="input-group">
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="modifiedFrom" id="modifiedFrom"
+                    value="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">から</span>
+                </div>
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="modifiedThrough"
+                    id="modifiedThrough" valufe="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">まで</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="reservationFor[id]">
                 イベント
             </label>
             <div class="row">
@@ -72,7 +99,7 @@ Aa-11
         </div>
 
         <div class="form-group">
-            <label for="reservedTicket[ticketedSeat][seatNumber]" class="">
+            <label for="reservedTicket[ticketedSeat][seatNumber]">
                 チケット
             </label>
             <div class="row">
@@ -98,7 +125,7 @@ Aa-11
         </div>
 
         <div class="form-group">
-            <label for="underName[id]" class="">
+            <label for="underName[id]">
                 チケットホルダー
             </label>
             <div class="row">
@@ -122,7 +149,7 @@ Aa-11
         </div>
 
         <div class="form-group">
-            <label for="checkedIn" class="">
+            <label for="checkedIn">
             </label>
             <div class="row">
                 <div class="col-md-2">
