### Fixed - 座席指定有無判定修正

--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -18,8 +18,8 @@
             &copy;
             <script>
                 document.write(new Date().getFullYear())
-            </script>, made with <i class="material-icons">favorite</i> by
-            <a href="https://motionpicture.jp" target="_blank">Motionpicture</a>. <b>Version</b> <%= version %>
+            </script>, made by
+            <a href="https://motionpicture.jp" target="_blank">Motion Picture</a>. <b>Version</b> <%= version %>
         </div>
     </div>
 </footer>
