### Fixed - スケジュール検索、上映時間計算の不具合修正

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,8 +216,7 @@ body {
   .scheduler .screen {
     position: relative; }
   .scheduler .performance {
-    position: absolute;
-    padding: 0px 2px; }
+    position: absolute; }
     .scheduler .performance:hover {
       z-index: 10; }
 
