--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -131,13 +131,13 @@ Aa-4
                                 v-bind:style="{ minWidth: SCREEN_WIDTH + 'px' }">
                                 <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }"
                                     class="border-bottom w-100"></div>
-                                <div v-for="performance in screen.performances" class="performance w-100"
+                                <div v-for="performance in screen.performances" class="performance w-100 overflow-hidden px-1"
                                     v-on:click="editPerformance(performance)"
                                     v-bind:style="getPerformanceStyle(performance)">
                                     <div v-bind:class="{ 
                                     'bg-danger': getOverlapPerformanceCount(performance, screen.performances) > 0,
                                     'bg-primary': getOverlapPerformanceCount(performance, screen.performances) === 0
-                                }" class="inner p-1 rounded pointer border border-white">
+                                    }" class="inner h-100 p-1 rounded pointer border border-white">
                                         <div class="overflow-hidden nowrap mw-100 text-x-small text-white">
                                             {{ performance.name.ja }}
                                         </div>
