--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,22 +62,22 @@ DB-01
                 </div>
             </div>
         </div>
-        <!-- <div class="col-lg-3 col-md-6 col-sm-6">
+        <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
                     <div class="card-icon">
-                        <i class="fa fa-twitter"></i>
+                        <i class="fa fa-tasks"></i>
                     </div>
-                    <p class="card-category">Followers</p>
-                    <h3 class="card-title">+245</h3>
+                    <p class="card-category">Queues</p>
+                    <h3 class="card-title"><span class="queueCount"></span></h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
-                        <i class="material-icons">update</i> Just Updated
+                        <!-- <i class="material-icons">update</i> Just Updated -->
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
     </div>
 
 
