--- a/views/creativeWorks/movie/index.ejs
+++ b/views/creativeWorks/movie/index.ejs
@@ -72,7 +72,7 @@ Aa-10
         </div>
 
         <div class="panel-body">
-            <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+            <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
             <a class="btn btn-primary" role="button" href="/creativeWorks/movie/add">
                 <i class=" fa fa-plus"></i> 登録</a>
             <% } %>
@@ -96,7 +96,7 @@ Aa-10
                     <th>上映時間(分)</th>
                     <th>レイティング</th>
                     <th>公開日<br>興行終了予定日</th>
-                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+                    <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
                     <th></th>
                     <% } %>
                 </tr>
@@ -111,7 +111,7 @@ Aa-10
                     <td name="contentRating" class="text-left">$contentRating$</td>
                     <td name="dayPublished__dayAvailabilityEnds" class="text-left">
                         $dayPublished$<br>$dayAvailabilityEnds$</td>
-                    <% if (user.cognitoGroups.movieTheaters === undefined) { %>
+                    <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
                     <td name="identifier__identifier">
                         <div class="text-center">
                             <a target="_blank" class="btn btn-sm btn-primary"
