--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -18,26 +18,25 @@
                                 </label>
                                 <div class="col-md-8">
                                     <select class="form-control" name="theater">
-                                        <% if (user.cognitoGroups.movieTheaters === undefined) { %>
-                                        <option value="0" disabled selected>
-                                            選択してください</option>
-                                        <% for (const movieTheater of movieTheaters) { %>
-                                        <option value="<%= movieTheater.branchCode %>"
-                                            data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
-                                            data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
-                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
-                                            <%= movieTheater.name.ja %>
-                                        </option>
-                                        <% } %>
+                                        <option value="0" disabled selected> 選択してください</option>
+                                        <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
+                                            <% for (const movieTheater of movieTheaters) { %>
+                                            <option value="<%= movieTheater.branchCode %>"
+                                                data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                                data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
+                                                data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
+                                                <%= movieTheater.name.ja %>
+                                            </option>
+                                            <% } %>
                                         <% } else { %>
-                                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                                        <option value="<%= movieTheater.branchCode %>"
-                                            data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
-                                            data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
-                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
-                                            <%= movieTheater.name.ja %>
-                                        </option>
-                                        <% } %>
+                                            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                                            <option value="<%= movieTheater.branchCode %>"
+                                                data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                                data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
+                                                data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
+                                                <%= movieTheater.name.ja %>
+                                            </option>
+                                            <% } %>
                                         <% } %>
                                     </select>
                                 </div>
