--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -3,18 +3,18 @@
         劇場<span class="text-danger">＊</span>
     </label>
     <select class="form-control" name="locationBranchCode">
-        <% if (user.cognitoGroups.movieTheaters === undefined) { %>
         <option value="">選択してください</option>
-        <% for (const movieTheater of movieTheaters) { %>
-        <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
-                %> selected <% } %>>
-            <%= movieTheater.name.ja %>
-        </option>
-        <% } %>
+        <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
+            <% for (const movieTheater of movieTheaters) { %>
+            <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
+                    %> selected <% } %>>
+                <%= movieTheater.name.ja %>
+            </option>
+            <% } %>
         <% } else { %>
-        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-        <% } %>
+            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+            <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+            <% } %>
         <% } %>
     </select>
 </div>
