--- a/views/places/movieTheater/form.ejs
+++ b/views/places/movieTheater/form.ejs
@@ -74,23 +74,6 @@
         readonly<% } %>><%- forms.offersStr %></textarea>'
 </div>
 
-<div class="form-group">
-    <label for="name" class="">
-        追加特性
-    </label>
-    <% forms.additionalProperty.forEach((_, key) => { %>
-    <div class="input-group mb-1">
-        <!-- <span class="input-group-addon">Name:Value</span> -->
-        <input class="form-control" name="additionalProperty[<%= key %>][name]"
-            id="additionalProperty[<%= key %>][name]" placeholder="Name" maxlength=64
-            value="<%= forms.additionalProperty[key].name %>">
-
-        <input class="form-control" name="additionalProperty[<%= key %>][value]"
-            id="additionalProperty[<%= key %>][value]" placeholder="Value"
-            value="<%= forms.additionalProperty[key].value %>">
-    </div>
-    <% }) %>
-    <p class="message"></p>
-    <p class="error message text-danger">
-    </p>
-</div>
+<%- include('../../common/part/_additionalProperty', {
+    additionalProperty: forms.additionalProperty
+}) %>
