--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -147,7 +147,7 @@ Aa-4
                                                 {{ performance.offers.name.ja }}
                                             </a>
                                         </div>
-                                        <div>
+                                        <div class="overflow-hidden">
                                             <span v-if="isReservedSeatsAvailable(performance)"
                                                 class="badge badge-success">
                                                 座席指定</span>
