### Added - プロジェクトインターフェースを追加 - 全リソースにプロジェクトを結合 - 全リソース検索条件にプロジェクトを追加

--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -25,10 +25,10 @@ Aa-6
         </div>
 
         <div class="form-group">
-            <label for="id" class="">
+            <label for="identifier" class="">
                 券種コード
             </label>
-            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64>
         </div>
 
         <div class="form-group">
@@ -132,10 +132,10 @@ Aa-6
             <tbody>
                 <tr id="templateRow" _id="$id$">
                     <td
-                        name="id__id__categoryName__priceSpecification.accounting.operatingRevenue.codeValue__priceSpecification.accounting.operatingRevenue.codeValue__availability">
+                        name="id__identifier__categoryName__priceSpecification.accounting.operatingRevenue.codeValue__priceSpecification.accounting.operatingRevenue.codeValue__availability">
                         <p>
                             <a target="_blank" href="/ticketTypes/$id$/update">
-                                $id$
+                                $identifier$
                             </a>
                         </p>
                         <p class="badge badge-info">$categoryName$</p>
