--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -25,10 +25,10 @@ Aa-8
         </div>
 
         <div class="form-group">
-            <label for="id" class="">
+            <label for="identifier" class="">
                 券種グループコード
             </label>
-            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64>
         </div>
 
         <div class="form-group">
@@ -63,8 +63,8 @@ Aa-8
                 </tr>
             </thead>
             <tbody>
-                <tr id="templateRow" _id="$_id$">
-                    <td name="ticketGroupCode">$ticketGroupCode$</td>
+                <tr id="templateRow" _id="$id$">
+                    <td name="identifier">$identifier$</td>
                     <td name="name.ja">$name.ja$</td>
                     <td name="itemOffered.serviceType.id">$itemOffered.serviceType.id$</td>
                     <td name="id__id__id" class="center">
