--- a/views/serviceTypes/index.ejs
+++ b/views/serviceTypes/index.ejs
@@ -27,7 +27,8 @@ Aa-17
             <label for="identifier" class="">
                 興行区分コード
             </label>
-            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value="">
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64
+                value="">
         </div>
 
         <div class="form-group">
@@ -65,8 +66,8 @@ Aa-17
                 </tr>
             </thead>
             <tbody>
-                <tr id="templateRow" identifier="$identifier$">
-                    <td name="id">$id$</td>
+                <tr id="templateRow" identifier="$id$">
+                    <td name="identifier">$identifier$</td>
                     <td name="name">
                         $name$
                     </td>
