--- a/views/ticketType/add.ejs
+++ b/views/ticketType/add.ejs
@@ -17,17 +17,17 @@ Aa-5
         </div>
 
         <div class="form-group">
-            <label for="id" class="">
+            <label for="identifier" class="">
                 券種コード<span class="text-danger">＊</span>
             </label>
-            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64 value=<%=forms.id
+            <input type="text" class="form-control" name="identifier" id="identifier" placeholder="" maxlength=64 value=<%=forms.identifier
                     %>>
             <p class="message">
                 半角64文字以内でご入力ください。
             </p>
             <p class="error message text-danger">
-                <% if (errors && errors.id) { %>
-                <%- errors.id.msg %>
+                <% if (errors && errors.identifier) { %>
+                <%- errors.identifier.msg %>
                 <% } %>
             </p>
         </div>
