--- a/views/ticketType/update.ejs
+++ b/views/ticketType/update.ejs
@@ -18,7 +18,7 @@ Aa-5
             <%- include('../common/successMessage') %>
         </div>
 
-        <input type="hidden" name="id" value="<%= forms.id %>">
+        <input type="hidden" name="identifier" value="<%= forms.identifier %>">
 
         <%- include('form', {forms: forms}) %>
 
