--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -42,12 +42,12 @@
                 <p>券種グループ</p>
             </a>
         </li>
-        <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
+        <!-- <li class="nav-item <%= (displayId === 'AT-01') ? 'active': ''; %>">
             <a class="nav-link" href="/accountTitles">
                 <i class="icon fa fa-table"></i>
                 <p>細目</p>
             </a>
-        </li>
+        </li> -->
         <li class="nav-item <%= (displayId === 'Aa-17') ? 'active': ''; %>">
             <a class="nav-link" href="/serviceTypes">
                 <i class="icon fa fa-table"></i>
