--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -52,8 +52,8 @@ Aa-12
             </thead>
             <tbody>
                 <tr id="templateRow" identifier="">
-                    <td name="branchCode__branchCode"><a target="_blank"
-                            href="/places/movieTheater/$branchCode$/update">$branchCode$</a>
+                    <td name="id__branchCode"><a target="_blank"
+                            href="/places/movieTheater/$id$/update">$branchCode$</a>
                     </td>
                     <td name="name.ja__name.en__kanaName">
                         $name.ja$<br>
