--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -19,13 +19,13 @@ Aa-4
                 <select class="form-control" name="theater">
                     <option value="">選択してください</option>
                     <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
-                        <% for (const movieTheater of movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                        <% } %>
+                    <% for (const movieTheater of movieTheaters) { %>
+                    <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
+                    <% } %>
                     <% } else { %>
-                        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-                        <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-                        <% } %>
+                    <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+                    <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
+                    <% } %>
                     <% } %>
                 </select>
             </div>
@@ -123,7 +123,8 @@ Aa-4
                 <tbody>
                     <tr>
                         <td class="text-center border" v-bind:style="{ width: TIME_WIDTH + 'px' }">
-                            <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }" class="border-bottom">
+                            <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }"
+                                class="border-bottom">
                                 {{ time }}</div>
                         </td>
                         <template v-for="date in scheduleData.dates">
@@ -131,13 +132,15 @@ Aa-4
                                 v-bind:style="{ minWidth: SCREEN_WIDTH + 'px' }">
                                 <div v-for="time in times" v-bind:style="{ height: HOUR_HEIGHT + 'px' }"
                                     class="border-bottom w-100"></div>
-                                <div v-for="performance in screen.performances" class="performance w-100 overflow-hidden px-1"
+                                <div v-for="performance in screen.performances"
+                                    class="performance w-100 overflow-hidden px-1"
                                     v-on:click="editPerformance(performance)"
                                     v-bind:style="getPerformanceStyle(performance)">
                                     <div v-bind:class="{ 
                                     'bg-danger': getOverlapPerformanceCount(performance, screen.performances) > 0,
                                     'bg-primary': !getAdditionalProperty(performance.superEvent.additionalProperty, 'color') && getOverlapPerformanceCount(performance, screen.performances) === 0
-                                    }" v-bind:style="{ backgroundColor: getAdditionalProperty(performance.superEvent.additionalProperty, 'color') }" class="inner h-100 p-1 rounded pointer border border-white">
+                                    }" v-bind:style="{ backgroundColor: getAdditionalProperty(performance.superEvent.additionalProperty, 'color') }"
+                                        class="inner h-100 p-1 rounded pointer border border-white">
                                         <div class="overflow-hidden nowrap mw-100 text-x-small text-white">
                                             {{ performance.name.ja }}
                                         </div>
