--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -1,26 +1,26 @@
 <div class="form-group">
-    <label for="locationBranchCode" class="">
+    <label for="locationId" class="">
         劇場<span class="text-danger">＊</span>
     </label>
-    <select class="form-control" name="locationBranchCode">
+    <select class="form-control" name="locationId">
         <option value="">選択してください</option>
         <% if (user.cognitoGroups.movieTheaters === undefined || user.cognitoGroups.movieTheaters.length === 0) { %>
-            <% for (const movieTheater of movieTheaters) { %>
-            <option value="<%= movieTheater.branchCode %>" <% if (forms.locationBranchCode===movieTheater.branchCode) {
+        <% for (const movieTheater of movieTheaters) { %>
+        <option value="<%= movieTheater.id %>" <% if (forms.locationId === movieTheater.id) {
                     %> selected <% } %>>
-                <%= movieTheater.name.ja %>
-            </option>
-            <% } %>
+            <%= movieTheater.name.ja %>
+        </option>
+        <% } %>
         <% } else { %>
-            <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
-            <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
-            <% } %>
+        <% for (const movieTheater of user.cognitoGroups.movieTheaters) { %>
+        <option value="<%= movieTheater.id %>"><%= movieTheater.name.ja %></option>
+        <% } %>
         <% } %>
     </select>
 </div>
 
 <div class="form-group">
-    <label for="locationBranchCode" class="">
+    <label for="workPerformed[identifier]" class="">
         作品<span class="text-danger">＊</span>
     </label>
     <select class="form-control" name="workPerformed[identifier]" id="workPerformed[identifier]">
