--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -103,8 +103,10 @@ Aa-6
         <div class="panel-body">
             <a class="btn btn-primary" role="button" href="/ticketTypes/add">
                 <i class=" fa fa-plus"></i> 登録</a>
+            <% if (process.env.USE_COA === '1') { %>
             <a class="btn btn-primary importFromCOA" role="button" href="javascript:void(0)">
                 <i class=" fa fa-plus"></i> COAからインポート</a>
+            <% } %>
 
             <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
             <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
