### Fixed - 券種グループを削除できないバグ対応

--- a/views/ticketTypeGroup/update.ejs
+++ b/views/ticketTypeGroup/update.ejs
@@ -16,6 +16,7 @@ Aa-7
             <%- include('../common/successMessage') %>
         </div>
 
+        <input type="hidden" name="id" value="<%= forms.id %>">
         <input type="hidden" name="identifier" value="<%= forms.identifier %>">
 
         <%- include('form', { forms: forms }) %>
