--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,11 @@ body {
 .overflow-hidden {
   overflow: hidden; }
 
+.text-overflow {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; }
+
 .text-x-small {
   font-size: 10px; }
 
