--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -40,6 +40,12 @@ body {
     overflow: hidden;
 }
 
+.text-overflow {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 .text-x-small {
     font-size: 10px;
 }
