### Changed - イベントオンライン表示開始日を相対的に設定できるように対応

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -120,7 +120,7 @@
                         </div>
 
                         <div class="form-group">
-                            <div class="row">
+                            <!-- <div class="row">
                                 <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
                                     for="saleStartDate">販売開始日</label>
                                 <div class="col-md-8">
@@ -145,7 +145,7 @@
                                             placeholder="上映日からn日" maxlength=10>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div class="form-group">
