--- a/public/scss/_scheduler.scss
+++ b/public/scss/_scheduler.scss
@@ -1,6 +1,6 @@
-* {
-    box-sizing: border-box;
-}
+// * {
+//     box-sizing: border-box;
+// }
 
 .scheduler {
     margin: 0 auto;
@@ -32,8 +32,6 @@
         position: absolute;
         &:hover {
             z-index: 10;
-        }
-        .inner {
         }
     }
 }
