--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -69,11 +69,17 @@ Aa-12
                         <br>$availabilityStartsGraceTimeInDays$日前
                         <br>$availabilityEndsGraceTimeInMinutes$
                     </td>
-                    <td name="branchCode" class="">
+                    <td name="branchCode__id" class="">
                         <div class="text-center">
                             <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
                                 data-branchCode="$branchCode$">
                                 <span>追加特性</span>
+                            </a>
+                        </div>
+                        <div class="text-center">
+                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-secondary showContainsPlace"
+                                data-id="$id$">
+                                <span>スクリーン情報</span>
                             </a>
                         </div>
                     </td>
@@ -90,6 +96,22 @@ Aa-12
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
                 <h4 class="modal-title">劇場の追加特性</h4>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="modal-containsPlace" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
+                <h4 class="modal-title">スクリーン情報</h4>
             </div>
             <div class="modal-body">
             </div>
