--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -99,6 +99,25 @@ Aa-11
         </div>
 
         <div class="form-group">
+            <label for="modifiedFrom">
+                イベント開始日時(From - To)
+            </label>
+
+            <div class="input-group">
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="reservationFor[startFrom]"
+                    id="reservationFor[startFrom]" value="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">から</span>
+                </div>
+                <input class="form-control datepicker" placeholder="" maxlength=10 name="reservationFor[startThrough]"
+                    id="reservationFor[startThrough]" valufe="" />
+                <div class="input-group-append">
+                    <span class="input-group-text">まで</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label for="reservedTicket[ticketedSeat][seatNumber]">
                 チケット
             </label>
